USVT altered and added; completed for 0.2.0;

--- a/inst/REFERENCES.bib
+++ b/inst/REFERENCES.bib
@@ -1,3 +1,17 @@
+@article{chatterjee2015,
+author = "Chatterjee, Sourav",
+doi = "10.1214/14-AOS1272",
+fjournal = "The Annals of Statistics",
+journal = "Ann. Statist.",
+month = "02",
+number = "1",
+pages = "177--214",
+publisher = "The Institute of Mathematical Statistics",
+title = "Matrix estimation by Universal Singular Value Thresholding",
+url = "https://doi.org/10.1214/14-AOS1272",
+volume = "43",
+year = "2015"
+}
 
 @article{keshavan_matrix_2010,
 	title = {Matrix {Completion} {From} a {Few} {Entries}},
