--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -117,6 +117,21 @@
   number = {6}
 }
 
+@article{li_survey_2019,
+  title = {A {{Survey}} on {{Matrix Completion}}: {{Perspective}} of {{Signal Processing}}},
+  shorttitle = {A {{Survey}} on {{Matrix Completion}}},
+  author = {Li, Xiao Peng and Huang, Lei and So, Hing Cheung and Zhao, Bo},
+  year = {2019},
+  month = may,
+  archivePrefix = {arXiv},
+  eprint = {1901.10885},
+  eprinttype = {arxiv},
+  file = {/home/kisung/Dropbox/VR. Research/ks.filling/[Li.2019] A Survey on Matrix Completion.pdf;/home/kisung/Zotero/storage/G7HCAJ5F/1901.html},
+  journal = {arXiv:1901.10885 [eess]},
+  keywords = {Electrical Engineering and Systems Science - Signal Processing},
+  primaryClass = {eess}
+}
+
 @article{mandelj_comparison_2015,
   title = {A {{Comparison}} of {{Six Methods}} for {{Missing Data Imputation}}},
   author = {Mandel J, Schmitt P},
