--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -80,6 +80,20 @@
   number = {8}
 }
 
+@article{elharrouss_image_2020,
+  title = {Image {{Inpainting}}: {{A Review}}},
+  author = {Elharrouss, Omar and Almaadeed, Noor and {Al-Maadeed}, Somaya and Akbari, Younes},
+  year = {2020},
+  month = apr,
+  volume = {51},
+  pages = {2007--2028},
+  issn = {1370-4621, 1573-773X},
+  doi = {10.1007/s11063-019-10163-0},
+  journal = {Neural Processing Letters},
+  language = {en},
+  number = {2}
+}
+
 @book{gelman_data_2007,
   title = {Data Analysis Using Regression and Multilevel/Hierarchical Models},
   author = {Gelman, Andrew and Hill, Jennifer},
@@ -130,6 +144,21 @@
   journal = {arXiv:1901.10885 [eess]},
   keywords = {Electrical Engineering and Systems Science - Signal Processing},
   primaryClass = {eess}
+}
+
+@article{lin_missing_2020,
+  title = {Missing Value Imputation: A Review and Analysis of the Literature (2006\textendash 2017)},
+  shorttitle = {Missing Value Imputation},
+  author = {Lin, Wei-Chao and Tsai, Chih-Fong},
+  year = {2020},
+  month = feb,
+  volume = {53},
+  pages = {1487--1509},
+  issn = {0269-2821, 1573-7462},
+  doi = {10.1007/s10462-019-09709-4},
+  journal = {Artificial Intelligence Review},
+  language = {en},
+  number = {2}
 }
 
 @article{mandelj_comparison_2015,
