--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -41,6 +41,20 @@
   number = {6}
 }
 
+@article{candes_matrix_2010,
+  title = {Matrix {{Completion With Noise}}},
+  author = {Candes, Emmanuel J and Plan, Yaniv},
+  year = {2010},
+  month = jun,
+  volume = {98},
+  pages = {925--936},
+  issn = {0018-9219, 1558-2256},
+  doi = {10.1109/JPROC.2009.2035722},
+  file = {/home/kisung/Dropbox/VR. Research/ks.filling/[Candes.2010] Matrix Completion With Noise.pdf},
+  journal = {Proceedings of the IEEE},
+  number = {6}
+}
+
 @article{chatterjee_matrix_2015,
   title = {Matrix Estimation by Universal Singular Value Thresholding},
   author = {Chatterjee, Sourav},
@@ -80,6 +94,21 @@
   number = {8}
 }
 
+@article{eddelbuettel_rcpparmadillo_2014b,
+  title = {{{RcppArmadillo}}: {{Accelerating R}} with High-Performance {{C}}++ Linear Algebra},
+  shorttitle = {{{RcppArmadillo}}},
+  author = {Eddelbuettel, Dirk and Sanderson, Conrad},
+  year = {2014},
+  month = mar,
+  volume = {71},
+  pages = {1054--1063},
+  issn = {01679473},
+  doi = {10.1016/j.csda.2013.02.005},
+  file = {/home/kisung/Dropbox/VR. Research/ks.filling/[Eddelbuettel.2014] RcppArmadillo.pdf},
+  journal = {Computational Statistics \& Data Analysis},
+  language = {en}
+}
+
 @article{elharrouss_image_2020,
   title = {Image {{Inpainting}}: {{A Review}}},
   author = {Elharrouss, Omar and Almaadeed, Noor and {Al-Maadeed}, Somaya and Akbari, Younes},
@@ -92,6 +121,22 @@
   journal = {Neural Processing Letters},
   language = {en},
   number = {2}
+}
+
+@article{fu_cvxr_2018a,
+  title = {{{CVXR}}: {{An R Package}} for {{Disciplined Convex Optimization}}},
+  shorttitle = {{{CVXR}}},
+  author = {Fu, Anqi and Narasimhan, Balasubramanian and Boyd, Stephen},
+  year = {2018},
+  month = oct,
+  abstract = {CVXR is an R package that provides an object-oriented modeling language for convex optimization, similar to CVX, CVXPY, YALMIP, and Convex.jl. It allows the user to formulate convex optimization problems in a natural mathematical syntax rather than the restrictive form required by most solvers. The user specifies an objective and set of constraints by combining constants, variables, and parameters using a library of functions with known mathematical properties. CVXR then applies signed disciplined convex programming (DCP) to verify the problem's convexity. Once verified, the problem is converted into standard conic form using graph implementations and passed to a cone solver such as ECOS or SCS. We demonstrate CVXR's modeling framework with several applications.},
+  archivePrefix = {arXiv},
+  eprint = {1711.07582},
+  eprinttype = {arxiv},
+  file = {/home/kisung/Dropbox/VR. Research/ks.filling/[Fu.2018] CVXR.pdf;/home/kisung/Zotero/storage/4Y5Y3GD3/1711.html},
+  journal = {arXiv:1711.07582 [stat]},
+  keywords = {Statistics - Computation},
+  primaryClass = {stat}
 }
 
 @book{gelman_data_2007,
@@ -183,6 +228,15 @@
   journal = {Journal of Machine Learning Research}
 }
 
+@manual{rcoreteam_language_2020,
+  title = {R: {{A}} Language and Environment for Statistical Computing},
+  author = {{R Core Team}},
+  year = {2020},
+  address = {{Vienna, Austria}},
+  organization = {{R Foundation for Statistical Computing}},
+  type = {Manual}
+}
+
 @inproceedings{rennie_fast_2005,
   title = {Fast Maximum Margin Matrix Factorization for Collaborative Prediction},
   booktitle = {{{ICML}} '05 {{Proceedings}} of the 22nd International Conference on {{Machine}} Learning},
@@ -193,6 +247,21 @@
   doi = {10.1145/1102351.1102441},
   isbn = {978-1-59593-180-1},
   language = {English}
+}
+
+@article{sanderson_armadillo_2016b,
+  title = {Armadillo: A Template-Based {{C}}++ Library for Linear Algebra},
+  shorttitle = {Armadillo},
+  author = {Sanderson, Conrad and Curtin, Ryan},
+  year = {2016},
+  month = jun,
+  volume = {1},
+  pages = {26},
+  issn = {2475-9066},
+  doi = {10.21105/joss.00026},
+  file = {/home/kisung/Dropbox/VR. Research/ks.filling/[Sanderson.2016] Armadillo.pdf},
+  journal = {The Journal of Open Source Software},
+  number = {2}
 }
 
 @incollection{srebro_maximummargin_2005,
