paper prelim complete

--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -289,4 +289,11 @@
   pmid = {11395428}
 }
 
+@manual{wickham_devtools_2020,
+  title = {Devtools: {{Tools}} to Make Developing r Packages Easier},
+  author = {Wickham, Hadley and Hester, Jim and Chang, Winston},
+  year = {2020},
+  type = {Manual}
+}
+
 
