--- a/inst/REFERENCES.bib
+++ b/inst/REFERENCES.bib
@@ -20,8 +20,7 @@ year = "2015"
 	author = {Keshavan, Raghunandan H. and Montanari, Andrea and Oh, Sewoong},
 	month = jun,
 	year = {2010},
-	pages = {2980--2998},
-	file = {[Keshavan.2010] Matrix Completion From a Few Entries.pdf:/home/kisung/Dropbox/V3. Statistics/P6. ML/S6. Matrix Completion/[Keshavan.2010] Matrix Completion From a Few Entries.pdf:application/pdf}
+	pages = {2980--2998}
 }
 
 @book{gelman_data_2007,
@@ -33,8 +32,7 @@ year = "2015"
 	author = {Gelman, Andrew and Hill, Jennifer},
 	year = {2007},
 	note = {OCLC: ocm67375137},
-	keywords = {Multilevel models (Statistics), Regression analysis},
-	file = {[Gelman_Hill.2007] Data analysis using regression and multilevel-hierarchical models.pdf:/home/kisung/Dropbox/V3. Statistics/P6. ML/S6. Matrix Completion/[Gelman_Hill.2007] Data analysis using regression and multilevel-hierarchical models.pdf:application/pdf}
+	keywords = {Multilevel models (Statistics), Regression analysis}
 }
 
 @article{candes_exact_2009,
@@ -47,8 +45,7 @@ year = "2015"
 	author = {Candès, Emmanuel J. and Recht, Benjamin},
 	month = dec,
 	year = {2009},
-	pages = {717--772},
-	file = {[Candès_Recht.2009] Exact Matrix Completion via Convex Optimization.pdf:/home/kisung/Dropbox/V3. Statistics/P6. ML/S6. Matrix Completion/[Candès_Recht.2009] Exact Matrix Completion via Convex Optimization.pdf:application/pdf}
+	pages = {717--772}
 }
 
 @article{davenport_overview_2016,
@@ -60,8 +57,7 @@ year = "2015"
 	author = {Davenport, Mark A. and Romberg, Justin},
 	month = jun,
 	year = {2016},
-	pages = {608--622},
-	file = {[Davenport_Romberg.2016] An Overview of Low-Rank Matrix Recovery From Incomplete Observations.pdf:/home/kisung/Dropbox/V3. Statistics/P6. ML/S6. Matrix Completion/[Davenport_Romberg.2016] An Overview of Low-Rank Matrix Recovery From Incomplete Observations.pdf:application/pdf}
+	pages = {608--622}
 }
 
 @incollection{srebro_maximum-margin_2005,
@@ -71,8 +67,7 @@ year = "2015"
 	author = {Srebro, Nathan and Rennie, Jason and Jaakkola, Tommi S.},
 	editor = {Saul, L. K. and Weiss, Y. and Bottou, L.},
 	year = {2005},
-	pages = {1329--1336},
-	file = {[Srebro.2005] Maximum-Margin Matrix Factorization.pdf:/home/kisung/Dropbox/V3. Statistics/P6. ML/S6. Matrix Completion/[Srebro.2005] Maximum-Margin Matrix Factorization.pdf:application/pdf}
+	pages = {1329--1336}
 }
 
 @article{mazumder_spectral_2010,
@@ -83,8 +78,7 @@ year = "2015"
 	author = {Mazumder, Rahul and Hastie, Trevor and Tibshirani, Robert},
 	month = aug,
 	year = {2010},
-	pages = {2287--2322},
-	file = {[Mazumder.2010] Spectral Regularization Algorithms for Learning Large Incomplete Matrices.pdf:/home/kisung/Dropbox/V3. Statistics/P6. ML/S6. Matrix Completion/[Mazumder.2010] Spectral Regularization Algorithms for Learning Large Incomplete Matrices.pdf:application/pdf}
+	pages = {2287--2322}
 }
 
 @article{hastie_matrix_2015,
@@ -97,8 +91,7 @@ year = "2015"
 	month = jan,
 	year = {2015},
 	keywords = {alternating least squares, matrix completion, nuclear norm, svd},
-	pages = {3367--3402},
-	file = {[Hastie.2015] Matrix Completion and Low-rank SVD via Fast Alternating Least Squares.pdf:/home/kisung/Dropbox/V3. Statistics/P6. ML/S6. Matrix Completion/[Hastie.2015] Matrix Completion and Low-rank SVD via Fast Alternating Least Squares.pdf:application/pdf}
+	pages = {3367--3402}
 }
 
 @article{azur_multiple_2011,
@@ -112,26 +105,20 @@ year = "2015"
 	author = {Azur, Melissa J. and Stuart, Elizabeth A. and Frangakis, Constantine and Leaf, Philip J.},
 	month = mar,
 	year = {2011},
-	pages = {40--49},
-	file = {[Azur.2011] Multiple imputation by chained equations.pdf:/home/kisung/Dropbox/V3. Statistics/P6. ML/S6. Matrix Completion/[Azur.2011] Multiple imputation by chained equations.pdf:application/pdf}
+	pages = {40--49}
 }
 
 @article{troyanskaya_missing_2001,
 	title = {Missing value estimation methods for {DNA} microarrays},
 	volume = {17},
 	issn = {1367-4803},
-	abstract = {MOTIVATION: Gene expression microarray experiments can generate data sets with multiple missing expression values. Unfortunately, many algorithms for gene expression analysis require a complete matrix of gene array values as input. For example, methods such as hierarchical clustering and K-means clustering are not robust to missing data, and may lose effectiveness even with a few missing values. Methods for imputing missing data are needed, therefore, to minimize the effect of incomplete data sets on analyses, and to increase the range of data sets to which these algorithms can be applied. In this report, we investigate automated methods for estimating missing data.
-RESULTS: We present a comparative study of several methods for the estimation of missing values in gene microarray data. We implemented and evaluated three methods: a Singular Value Decomposition (SVD) based method (SVDimpute), weighted K-nearest neighbors (KNNimpute), and row average. We evaluated the methods using a variety of parameter settings and over different real data sets, and assessed the robustness of the imputation methods to the amount of missing data over the range of 1--20\% missing values. We show that KNNimpute appears to provide a more robust and sensitive method for missing value estimation than SVDimpute, and both SVDimpute and KNNimpute surpass the commonly used row average method (as well as filling missing values with zeros). We report results of the comparative experiments and provide recommendations and tools for accurate estimation of missing microarray data under a variety of conditions.},
 	language = {eng},
 	number = {6},
 	journal = {Bioinformatics},
 	author = {Troyanskaya, O. and Cantor, M. and Sherlock, G. and Brown, P. and Hastie, T. and Tibshirani, R. and Botstein, D. and Altman, R. B.},
 	month = jun,
 	year = {2001},
-	pmid = {11395428},
-	keywords = {Algorithms, Data Interpretation, Statistical, Mathematical Computing, Cell Cycle, Cluster Analysis, Data Display, Gene Expression, Multigene Family, Oligonucleotide Array Sequence Analysis, Saccharomyces cerevisiae, Sensitivity and Specificity, Software},
-	pages = {520--525},
-	file = {[Troyanskaya.2001] Missing value estimation methods for DNA microarrays.pdf:/home/kisung/Dropbox/V3. Statistics/P6. ML/S6. Matrix Completion/[Troyanskaya.2001] Missing value estimation methods for DNA microarrays.pdf:application/pdf}
+	pages = {520--525}
 }
 
 @inproceedings{rennie_fast_2005,
@@ -142,8 +129,7 @@ RESULTS: We present a comparative study of several methods for the estimation of
 	publisher = {ACM Press},
 	author = {Rennie, Jasson D. M. and Srebro, Nathan},
 	year = {2005},
-	pages = {713--719},
-	file = {[Rennie_Srebro.2005] Fast maximum margin matrix factorization for collaborative prediction.pdf:/home/kisung/Dropbox/V3. Statistics/P6. ML/S6. Matrix Completion/[Rennie_Srebro.2005] Fast maximum margin matrix factorization for collaborative prediction.pdf:application/pdf}
+	pages = {713--719}
 }
 
 @article{cai_singular_2010,
@@ -156,8 +142,7 @@ RESULTS: We present a comparative study of several methods for the estimation of
 	author = {Cai, Jian-Feng and Candès, Emmanuel J. and Shen, Zuowei},
 	month = jan,
 	year = {2010},
-	pages = {1956--1982},
-	file = {[Cai.2010] A Singular Value Thresholding Algorithm for Matrix Completion.pdf:/home/kisung/Dropbox/V3. Statistics/P6. ML/S6. Matrix Completion/[Cai.2010] A Singular Value Thresholding Algorithm for Matrix Completion.pdf:application/pdf}
+	pages = {1956--1982}
 }
 
 @article{mandel_j_comparison_2015,
@@ -167,6 +152,5 @@ RESULTS: We present a comparative study of several methods for the estimation of
 	number = {01},
 	journal = {Journal of Biometrics \& Biostatistics},
 	author = {Mandel J, Schmitt P},
-	year = {2015},
-	file = {[Mandel J.2015] A Comparison of Six Methods for Missing Data Imputation.pdf:/home/kisung/Dropbox/V3. Statistics/P6. ML/S6. Matrix Completion/[Mandel J.2015] A Comparison of Six Methods for Missing Data Imputation.pdf:application/pdf}
+	year = {2015}
 }
